# Tic-Tac-Toe-Computer-Networks-HW-1

./: pyproject.toml
tic_tac_toe/: __init__.py  client.py  defensive.py  game_server.py  logger.py  menu_handler.py  messages.py  models.py  socket_handler.py  web_server.py
