[tool.poetry]
name = "tic-tac-toe-computer-networks-hw-1"
version = "0.1.0"
description = ""
authors = ["SmsS4 <smss.lite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
